--- a/public/index.html
+++ b/public/index.html
@@ -217,7 +217,14 @@
             <div class="col-xs-12 posts-list">
                 
                     <article>
-                        <h2><a href="http://www.artiendesign.com/blog/interface_design_guidelines/">Interface Design Guidelines</a></h2>
+                        <h2><a href="http://www.artiendesign.com/blog/why-typography-matters/">Why Typography Matters</a></h2>
+                        <div class=sub-header>
+                          October 2017 · 4 minute read
+                        </div>
+                    </article>
+                
+                    <article>
+                        <h2><a href="http://www.artiendesign.com/blog/interface-design-guidelines/">Interface Design Guidelines</a></h2>
                         <div class=sub-header>
                           September 2017 · 6 minute read
                         </div>
